<resources>
    <string name="app_name" translatable="false">Grumpy World</string>

    <string name="SERVER_URL" translatable="false">https://6106c6d3-8032-430f-bdbf-bf51c216cd80.clouding.host/grumpyworld/</string>
    <!--string name="SERVER_URL" translatable="false">://192.168.0.27</string-->
    <!--string name="SOCKET_URL" translatable="false">wss://6106c6d3-8032-430f-bdbf-bf51c216cd80.clouding.host:82</string-->
    <string name="SOCKET_URL" translatable="false">ws://192.168.0.27:82</string>

    <string name="menu_campana">Campaign</string>
    <string name="menu_entrenamiento">Trainning</string>
    <string name="menu_caza">Hunting</string>
    <string name="menu_mapa">Map</string>
    <string name="menu_sello" translatable="false">\??????</string>
    <string name="menu_multijugador">Multiplayer</string>
    <string name="menu_amigos">Friends</string>
    <string name="menu_duelo">Duel</string>
    <string name="menu_ranking" translatable="false">Ranking</string>
    <string name="menu_inventario">Inventory</string>
    <string name="menu_fabricacion">Crafting</string>
    <string name="menu_equipamiento">Equipment</string>
    <string name="menu_extras">Extra</string>
    <string name="menu_historia">Lore</string>
    <string name="menu_creditos">Credits</string>
    <string name="menu_cerrar_sesion">Sign out</string>

    <string name="quedan_anos_meses">%1$d years and %2$d months left</string>
    <string name="quedan_meses_dias">%1$d months and %2$d days left</string>
    <string name="quedan_dias_horas">%1$d days and %2$d hours left</string>
    <string name="quedan_horas_minutos">%1$d hours and %2$d minutes left</string>
    <string name="quedan_minutos_segundos">%1$d minutes and %2$d seconds left</string>
    <string name="quedan_segundos">%1$d seconds left</string>

    <string name="titulo_fuerza">STRENGTH</string>
    <string name="titulo_constitucion">CONSTITUTION</string>
    <string name="titulo_destreza">DEXTERITY</string>

    <string name="registro">Register</string>
    <string name="usuario_hint">User</string>
    <string name="contrasena_hint">Password</string>
    <string name="repetir_contrasena_hint">Repeat password</string>
    <string name="enviar">Send</string>
    <string name="registrate">You don\'t have an account? Sign up</string>

    <string name="error_desconocido">Unknown error (%1$s)</string>
    <string name="error_usuario_contrasena_incorrectos">Incorrect username and/or password</string>
    <string name="error_campo_vacio">No field can be empty</string>
    <string name="error_contrasenas_no_coinciden">Passwords don\'t match</string>
    <string name="error_usuario_ya_existe">User already exists</string>
    <string name="error_usuario_demasiado_largo">Username can\'t be longer than 15 characters</string>
    <string name="error_sesion_caducada">The session has expired. Restarting session…</string>

    <string name="ataque">Attack</string>
    <string name="especial">Special</string>
    <string name="contra">Counter</string>
    <string name="nivel">Lv. %1$d</string>

    <string name="enemigo_cepillo_corto">Toothbrush</string>
    <string name="enemigo_champu_corto">Pirate shampoo</string>
    <string name="enemigo_cuchilla_corto">Razor blade</string>
    <string name="enemigo_hambriento_corto">Hungry roll</string>
    <string name="enemigo_vater_corto">Toilet</string>

    <string name="enemigo_cuchara_corto">Cool spoon</string>
    <string name="enemigo_leche_corto">Suspicious milk</string>
    <string name="enemigo_limon_corto" translatable="false">Lee Mong</string>
    <string name="enemigo_zanahoria_corto">Carrobbit</string>
    <string name="enemigo_calabaza_corto">Evil pumpkin</string>

    <string name="enemigo_raton_corto">Mouse</string>
    <string name="enemigo_grapadora_corto">Stapler</string>
    <string name="enemigo_lapiz_corto">Pencil</string>
    <string name="enemigo_libro_corto">Book</string>
    <string name="enemigo_pendrive_corto" translatable="false">¯\\_(ツ)_/¯</string>

    <string name="cazar_de_nuevo">Hunt again</string>

    <string name="zona_bano">Bathroom</string>
    <string name="zona_cocina">Kitchen</string>
    <string name="zona_oficina">Office</string>
    <string name="zona_parque">Park</string>
    <string name="zona_cementerio">Cementery</string>
    <string name="zona_infierno">Hell</string>

    <string name="zonas_desbloqueadas">Unlocked areas:\n%1$d of 6</string>
    <string name="zona_cambiada">You have moved to %1$s</string>

    <string name="material_buen_rollo">Rock\'n\'roll</string>
    <string name="material_plastico">Plastic</string>
    <string name="material_madera">Wood</string>
    <string name="material_trozo_calabaza">Piece of pumpkin</string>
    <string name="material_zumo_limon">Lemon juice</string>
    <string name="material_grapa">Staple</string>
    <string name="material_zinc">Zinc</string>
    <string name="material_cable">Cable</string>
    <string name="material_cobre">Copper</string>
    <string name="material_bateria">Battery</string>
    <string name="material_papel">Paper</string>


    <string name="victoria">Victory!</string>
    <string name="derrota">Defeat :(</string>

    <string name="equipable_tenedor">Plastic fork</string>
    <string name="equipable_casco_obra">Construction helmet</string>
    <string name="equipable_mazo_juez">Gavel</string>
    <string name="equipable_casco_calabaza">Pumpkin helmet</string>
    <string name="equipable_pistola_airsoft">Airsoft pistol</string>
    <string name="equipable_sombrero_papel">Paper hat</string>

    <string name="bonus_ataque">Attack +%1$d</string>
    <string name="bonus_defensa">Defense +%1$d</string>
    <string name="fuerza_requerida">Required strength: %1$d</string>
    <string name="destreza_requerida">Required dexterity: %1$d</string>
    <string name="materiales_necesarios">Required submaterials:</string>
    <string name="fabricar">Craft</string>
    <string name="objeto_ya_poseido">You already have this item.</string>

    <string name="tienes">You have: %1$d</string>
    <string name="no_submateriales">This is a basic material, you can obtain it by hunting creatures.</string>
    <string name="pista_material">Tap any material to see if it\'s a composite material.</string>

    <string name="nivel_requerido_7">You need to be level 7 to see this.</string>

    <string name="equipar">Equip</string>
    <string name="no_has_fabricado_nada">You haven\'t craft any item yet.</string>

    <string name="anadir_amigo">Add friend</string>
    <string name="titulo_peticiones_amistad">Friend requests</string>
    <string name="titulo_amigos">Friends</string>
    <string name="amigo_no_encontrado">Friend not found.</string>
    <string name="amigo_anadido">%1$s add.</string>

    <string name="retos">Challenges</string>
    <string name="duelos_clasificatorios">Ranked duels</string>
    <string name="duelos_amistosos">Friendly duels</string>
    <string name="has_retado_a">You have challenged %1$s</string>
    <string name="material_honor">Honor</string>
    <string name="duelo_de_nuevo">Duel again</string>

    <string name="credits_ezhor">Production, programming &amp; game design</string>
    <string name="credits_ezhor_name" translatable="false">Daniel Parrado Ortega</string>
    <string name="credits_gustavo">Characters &amp; environments art</string>
    <string name="credits_gustavo_name" translatable="false">Gustavo Arteaga</string>
</resources>
