<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.arensis_games.grumpyworld.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:textColor="@color/colorLetra"
            android:textSize="50sp"
            android:textAlignment="center"
            android:id="@+id/tvTitulo"
            android:layout_margin="60dp"
            android:layout_centerHorizontal="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLetra"
            android:textAlignment="center"
            android:hint="@string/usuario_hint"
            android:textColorHint="@color/colorAccent"
            android:id="@+id/etUsuario"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/tvTitulo"
            android:maxLines="1"
            android:inputType="text"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLetra"
            android:textAlignment="center"
            android:hint="@string/contrasena_hint"
            android:textColorHint="@color/colorAccent"
            android:id="@+id/etContrasena"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/etUsuario"
            android:layout_marginTop="30dp"
            android:inputType="textPassword"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLetra"
            android:textAlignment="center"
            android:hint="@string/repetir_contrasena_hint"
            android:textColorHint="@color/colorAccent"
            android:id="@+id/etRepetirContrasena"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/etContrasena"
            android:layout_marginTop="30dp"
            android:inputType="textPassword"
            android:maxLines="1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/etRepetirContrasena"
            android:layout_marginTop="30dp"
            android:text="Enviar"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorLetra"
            android:id="@+id/btnEnviar"
            android:onClick="enviar"
            />
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRepetirContrasena"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/progress"
            android:visibility="gone"
            />
    </RelativeLayout>
</ScrollView>
