<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.arensis_games.grumpyworld.fragment.MapaFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="visible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/progress">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/llBuscar">

                <TextView
                    android:id="@+id/tvBuscar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="end"
                    android:layout_gravity="center"
                    android:text="@string/anadir_amigo"
                    android:textColor="@color/colorLetra"
                    android:textSize="20sp" />

                <ImageButton
                    android:id="@+id/ibBuscar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:gravity="end"
                    android:textColor="@color/colorLetra"
                    android:background="@drawable/icono_lupa"
                    android:textSize="30sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="70dp">
                <TextView
                    android:id="@+id/tvPeticionesAmistad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_peticiones_amistad"
                    android:textColor="@color/colorLetra"
                    android:textSize="20sp"
                    android:clickable="false"/>

                <ListView
                    android:id="@+id/listaPeticiones"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:clickable="false"
                    android:orientation="vertical"
                    android:layout_below="@id/tvPeticionesAmistad"/>

                <TextView
                    android:id="@+id/tvAmigos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_amigos"
                    android:textColor="@color/colorLetra"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/listaPeticiones"/>

                <ListView
                    android:id="@+id/listaAmigos"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:clickable="false"
                    android:layout_below="@id/tvAmigos"
                    android:layout_alignParentBottom="true" />

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>
</FrameLayout>
